Fix CSS layout bug

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -5,6 +5,7 @@
   height: 96px;
   background: #4364af;
   padding: 0 32px;
+  flex: 0 1 auto;
 }
 
 .title {
